Trailhead/src/objects/Contact_Purpose__c.object
<CustomObject>
    <description>ATO&apos;s Initiatives to standardize the Salesforce Architecture</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Purposes</relationshipLabel>
        <relationshipName>Contact_Purposes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Method_Type__c</fullName>
        <label>Contact Method Type</label>
        <picklist>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InPerson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Contact Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Fund Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Document</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Branch Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Branch RMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - District Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Investment Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Purpose</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Contact Purpose ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Purposes</pluralLabel>
    <recordTypes>
        <fullName>WAM</fullName>
        <active>true</active>
        <label>WAM</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>